--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     </head>
     <body>
         <h1>Mon page</h1>
+        <button type="button" onclick="botao()">Clique aqui</button>
+        <h3 id="thanks"></h3>
     </body>
 </html>
